[package]
name = "libmzx"
version = "0.1.0"
license = "MIT"
authors = ["Josh Matthews <josh@joshmatthews.net>"]
edition = "2018"

[dependencies]
byteorder = "0.5"
log = "0.4"
itertools = "0.4"
enum_primitive = "0.1"
enum-primitive-derive = "0.1"
num-traits = "0.2"
rand = "0.4"
zip = { version = "0.5", features = ["deflate"] }